--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-proxy/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-proxy/pom.xml
@@ -15,6 +15,7 @@
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
+            <version>${v.sorcer}</version>
 		</dependency>
 	</dependencies>
 </project>
