--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/services.config
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/services.config
@@ -16,7 +16,7 @@ com.sun.jini.start {
 	serviceDescriptors = new ServiceDescriptor[] {
 		/* SORCER Webster, set to serve up root directories */
 		// (String policy, int port, String[] roots)
-		SorcerDescriptorUtil.getWebster(policy, port, new String[] { SorcerEnv.getRepoDir() }),
+		SorcerDescriptorUtil.getWebster(policy, port, new String[] { Resolver.getRootDir(), Resolver.getRepoDir() }),
 
 		new SorcerServiceDescriptor(
 			Resolver.resolveCodeBase(
