--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-req/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-req/pom.xml
@@ -15,6 +15,12 @@
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
+            <version>${v.sorcer}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>commons-req</artifactId>
+            <version>${v.sorcer}</version>
+        </dependency>
 	</dependencies>
 </project>
