--- a/tools/sorcer-provider/src/test/resources/projects/first/reference/first-api/pom.xml
+++ b/tools/sorcer-provider/src/test/resources/projects/first/reference/first-api/pom.xml
@@ -14,6 +14,7 @@
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
+            <version>${v.sorcer}</version>
 		</dependency>
 	</dependencies>
 </project>
