--- a/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/pom.xml
+++ b/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/pom.xml
@@ -23,6 +23,7 @@
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
+            <version>${v.sorcer}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
