--- a/tools/sorcer-provider/src/test/resources/projects/first/reference/first-req/pom.xml
+++ b/tools/sorcer-provider/src/test/resources/projects/first/reference/first-req/pom.xml
@@ -19,6 +19,12 @@
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
+            <version>${v.sorcer}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>commons-req</artifactId>
+            <version>${v.sorcer}</version>
+        </dependency>
 	</dependencies>
 </project>
