--- a/tools/sorcer-provider/src/test/resources/projects/first/reference/pom.xml
+++ b/tools/sorcer-provider/src/test/resources/projects/first/reference/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<artifactId>sorcer-root</artifactId>
+		<artifactId>provider-root</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
