--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/services.config
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/services.config
@@ -1,35 +1,25 @@
-import java.net.URL;
 import com.sun.jini.start.ServiceDescriptor;
-import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
-import sorcer.core.SorcerEnv;
+import sorcer.provider.boot.Booter;
 import sorcer.resolver.Resolver;
 import sorcer.util.Artifact;
-import sorcer.util.ArtifactCoordinates;
 
 com.sun.jini.start {
-	home = "${sorcer.home}";
 	policy = "${java.security.policy}";
 
-	port = 0;
-
 	serviceDescriptors = new ServiceDescriptor[] {
-		/* SORCER Webster, set to serve up root directories */
-		// (String policy, int port, String[] roots)
-		SorcerDescriptorUtil.getWebster(policy, port, new String[] { SorcerEnv.getRepoDir() }),
-
 		new SorcerServiceDescriptor(
-			Resolver.resolveCodeBase(
-				new ArtifactCoordinates[]{
-					ArtifactCoordinates.coords("${groupId}:${rootArtifactId}-api:${version}"),
-					Artifact.getSosPlatform()
+			Booter.resolveCodebase(
+				new String[]{
+					"${groupId}:${rootArtifactId}-api:${version}",
+					Artifact.getSosPlatform().toString()
 				}
 			),
 			policy,
 			Resolver.resolveClassPath(
-				new ArtifactCoordinates[]{
-					ArtifactCoordinates.coords("${groupId}:${rootArtifactId}-api:${version}"),
-					ArtifactCoordinates.coords("${groupId}:${rootArtifactId}-prv:${version}")
+				new String[]{
+					"${groupId}:${rootArtifactId}-api:${version}",
+					"${groupId}:${rootArtifactId}-prv:${version}"
 				}
 			),
 			"sorcer.core.provider.ServiceTasker",
