--- a/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/src/main/resources/META-INF/sorcer/services.config
@@ -1,11 +1,8 @@
-import java.net.URL;
 import com.sun.jini.start.ServiceDescriptor;
-import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
-import sorcer.core.SorcerEnv;
 import sorcer.resolver.Resolver;
 import sorcer.util.Artifact;
-import sorcer.util.ArtifactCoordinates;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.start {
 	home = "${sorcer.home}";
@@ -14,22 +11,18 @@ com.sun.jini.start {
 	port = 0;
 
 	serviceDescriptors = new ServiceDescriptor[] {
-		/* SORCER Webster, set to serve up root directories */
-		// (String policy, int port, String[] roots)
-		SorcerDescriptorUtil.getWebster(policy, port, new String[] { SorcerEnv.getRepoDir() }),
-
 		new SorcerServiceDescriptor(
-			Resolver.resolveCodeBase(
-				new ArtifactCoordinates[]{
-					ArtifactCoordinates.coords("com.example.sorcer:first-api:1.0-SNAPSHOT"),
-					Artifact.getSosPlatform()
+			Booter.resolveCodebase(
+				new String[]{
+					"com.example.sorcer:first-api:1.0-SNAPSHOT",
+					Artifact.getSosPlatform().toString()
 				}
 			),
 			policy,
 			Resolver.resolveClassPath(
-				new ArtifactCoordinates[]{
-					ArtifactCoordinates.coords("com.example.sorcer:first-api:1.0-SNAPSHOT"),
-					ArtifactCoordinates.coords("com.example.sorcer:first-prv:1.0-SNAPSHOT")
+				new String[]{
+					"com.example.sorcer:first-api:1.0-SNAPSHOT",
+					"com.example.sorcer:first-prv:1.0-SNAPSHOT"
 				}
 			),
 			"sorcer.core.provider.ServiceTasker",
