--- a/tools/provider-root/pom.xml
+++ b/tools/provider-root/pom.xml
@@ -93,11 +93,17 @@
                 <!-- disabled to make the startup of sorcer provider's faster -->
                 <updatePolicy>never</updatePolicy>
             </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
         <repository>
             <id>maven.boundary.com</id>
             <name>maven.boundary.com-releases</name>
             <url>http://maven.boundary.com/artifactory/external</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
