Move integration test to profile

--- a/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
+++ b/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
@@ -67,51 +67,75 @@
 					</archive>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.sorcersoft.sorcer</groupId>
-				<artifactId>sorcer-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>sorcer-preit</id>
-						<goals>
-							<goal>provider</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>sorcer-it</id>
-						<goals>
-							<goal>run-requestor</goal>
-						</goals>
-						<configuration>
-							<requestorClasspath>
-								<requestorClasspath>net.jini.lookup:serviceui:${v.jini}</requestorClasspath>
-								<requestorClasspath>junit:junit:4.11</requestorClasspath>
-							</requestorClasspath>
-							<requestors>
-								<param>
-									<mainClass>junit.sorcer.core.provider.ArithmeticNetTest</mainClass>
-								</param>
-								<param>
-									<mainClass>junit.sorcer.core.provider.ProviderAccessorTest</mainClass>
-								</param>
-								<param>
-									<mainClass>junit.sorcer.util.bdb.objects.SosUrlsTest</mainClass>
-									<classpath>
-										<entry>junit:junit:4.11</entry>
-										<entry>com.sleepycat:je:${v.sleepycat}</entry>
-									</classpath>
-								</param>
-							</requestors>
-						</configuration>
-					</execution>
-					<execution>
-						<id>sorcer-postit</id>
-						<goals>
-							<goal>destroy</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>run-its</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.sorcersoft.sorcer</groupId>
+						<artifactId>sorcer-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>sorcer-preit</id>
+								<goals>
+									<goal>provider</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>sorcer-it</id>
+								<goals>
+									<goal>run-requestor</goal>
+								</goals>
+								<configuration>
+									<requestorClasspath>
+										<requestorClasspath>org.sorcersoft.sorcer:sos-platform:${v.sorcer}
+										</requestorClasspath>
+										<requestorClasspath>
+											${project.groupId}:${project.artifactId}:${project.version}
+										</requestorClasspath>
+										<requestorClasspath>${project.groupId}:ju-arithmetic-api:${project.version}
+										</requestorClasspath>
+										<requestorClasspath>net.jini.lookup:serviceui:${v.jini}</requestorClasspath>
+										<requestorClasspath>junit:junit:4.11</requestorClasspath>
+										<requestorClasspath>org.slf4j:slf4j-simple:1.7.5</requestorClasspath>
+									</requestorClasspath>
+									<requestors>
+										<param>
+											<mainClass>junit.sorcer.core.provider.ArithmeticNetTest</mainClass>
+											<codebase>
+												<param>${project.groupId}:${project.artifactId}:${project.version}
+												</param>
+												<param>org.sorcersoft.sorcer:sos-platform:${v.sorcer}</param>
+												<param>org.sorcersoft.sorcer:ju-arithmetic-api:${v.sorcer}</param>
+											</codebase>
+										</param>
+										<param>
+											<mainClass>junit.sorcer.core.provider.ProviderAccessorTest</mainClass>
+										</param>
+										<param>
+											<mainClass>junit.sorcer.util.bdb.objects.SosUrlsTest</mainClass>
+											<classpath>
+												<entry>junit:junit:4.11</entry>
+												<entry>com.sleepycat:je:${v.sleepycat}</entry>
+											</classpath>
+										</param>
+									</requestors>
+								</configuration>
+							</execution>
+							<execution>
+								<id>sorcer-postit</id>
+								<goals>
+									<goal>destroy</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
