--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -27,138 +27,186 @@ com.sun.jini.start {
     startPort = Booter.getWebsterStartPort();
     endPort = Booter.getWebsterEndPort();
 
+    standardProviderCodebase = Booter.resolveCodebase(new String[]{
+        "org.sorcersoft.sorcer:sos-platform",
+        "org.sorcersoft.sorcer:sos-exertlet-sui",
+        "net.jini.lookup:serviceui"
+    });
+
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up lib directories */
-
-  	    new SorcerServiceDescriptor(null,
+  	    new SorcerServiceDescriptor(
+            null,
    			policy,
-			Resolver.resolveAbsolute("org.sorcersoft.sorcer:sos-webster"), 
+            Booter.resolveClasspath("org.sorcersoft.sorcer:sos-webster"),
 			"sorcer.tools.webster.Webster", 
-			new String[] { home + "${/}configs${/}webster${/}configs${/}webster-prv.config" }),
-                                         
-                                         
-/*
-        new SorcerServiceDescriptor(
-            "browser-dl.jar jsk-dl.jar",
-            policy,
-            jiniLibPath + "${/}browser.jar",
-            "com.sun.jini.example.browser.Browser",
-            new String[] { home + "${/}configs${/}jini${/}configs${/}browser.config" }),
-*/
+			new String[] { home + "/configs/webster/configs/webster-prv.config" }
+        ),
 
 	    new SorcerServiceDescriptor(
-	      	""+Resolver.resolveRelative("org.apache.river:reggie-dl"),
+	      	Booter.resolveCodebase("org.apache.river:reggie-dl"),
             policy,
-            Resolver.resolveAbsolute("org.apache.river:reggie"),
+            Booter.resolveClasspath("org.apache.river:reggie"),
             "com.sun.jini.reggie.TransientRegistrarImpl",
-            new String[] { home + "${/}configs${/}jini${/}configs${/}reggie.config" }),
+            new String[] { home + "/configs/jini/configs/reggie.config" }
+        ),
             
 		new SorcerServiceDescriptor(
-	    	""+Resolver.resolveRelative("org.apache.river:mahalo-dl"),
+            Booter.resolveCodebase("org.apache.river:mahalo-dl"),
             policy,
-            Resolver.resolveAbsolute("org.apache.river:mahalo"),
+            Booter.resolveClasspath("org.apache.river:mahalo"),
             "com.sun.jini.mahalo.TransientMahaloImpl",
-            new String[] { home + "${/}configs${/}jini${/}configs${/}mahalo.config" }),
-
-
-       new SorcerServiceDescriptor(
-	      	"" + Resolver.resolveRelative("org.apache.river:fiddler-dl"),
-            policy,
-            Resolver.resolveAbsolute("org.apache.river:fiddler"),
-           "com.sun.jini.fiddler.TransientFiddlerImpl",
-            new String[] { home + "${/}configs${/}jini${/}configs${/}fiddler.config" }),
+            new String[] { home + "/configs/jini/configs/mahalo.config" }
+        ),
 
         new SorcerServiceDescriptor(
-	      	"" + Resolver.resolveRelative("org.apache.river:mercury-dl"),
+            Booter.resolveCodebase("org.apache.river:fiddler-dl"),
             policy,
-            Resolver.resolveAbsolute("org.apache.river:mercury"),
+            Booter.resolveClasspath("org.apache.river:fiddler"),
+            "com.sun.jini.fiddler.TransientFiddlerImpl",
+            new String[] { home + "/configs/jini/configs/fiddler.config" }
+        ),
+
+        new SorcerServiceDescriptor(
+            Booter.resolveCodebase("org.apache.river:mercury-dl"),
+            policy,
+            Booter.resolveClasspath("org.apache.river:mercury"),
             "com.sun.jini.mercury.TransientMercuryImpl",
-            new String[] { home + "${/}configs${/}jini${/}configs${/}mercury.config" }),
+            new String[] { home + "/configs/jini/configs/mercury.config" }
+        ),
 
 
         new SorcerServiceDescriptor(
-	      	"" + Resolver.resolveRelative("org.apache.river:norm-dl"),
+            Booter.resolveCodebase("org.apache.river:norm-dl"),
             policy,
-            Resolver.resolveAbsolute("org.apache.river:norm"),
+            Booter.resolveClasspath("org.apache.river:norm"),
             "com.sun.jini.norm.TransientNormServerImpl",
-            new String[] { home + "${/}configs${/}jini${/}configs${/}norm.config" }),
+            new String[] { home + "/configs/jini/configs/norm.config" }
+        ),
             
-/*        new SorcerServiceDescriptor(
-	      	"" + Resolver.resolveRelative("org.apache.river:outrigger-dl"),
-            policy,
-            Resolver.resolveAbsolute("org.apache.river:outrigger"),
-            "com.sun.jini.outrigger.TransientOutriggerImpl",
-            new String[] { home + "${/}configs${/}jini${/}configs${/}outrigger.config" }),
-*/
-
    		// Blitz
-
         new SorcerServiceDescriptor(
- 			Resolver.resolveRelative("org.dancres.blitz:blitz-dl") +
- 			" " + Resolver.resolveRelative("org.dancres.blitz:blitzui"),
-            policy, 
-            ConfigUtil.concat(new Object[] {
-            	Resolver.resolveAbsolute("org.dancres.blitz:blitz"), ps,
-            	Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
-            	Resolver.resolveAbsolute("com.sleepycat:je"), ps,
-            	Resolver.resolveAbsolute("net.jini.lookup:serviceui"), ps,
-            	Resolver.resolveAbsolute("org.apache.river:outrigger-dl"), ps,
-            	Resolver.resolveAbsolute("net.jini:jsk-platform")
+            Booter.resolveCodebase(new String[]{
+                "org.dancres.blitz:blitz-dl",
+ 			    "org.dancres.blitz:blitzui"
+            }),
+            policy,
+            Booter.resolveClasspath(new String[]{
+            	"org.dancres.blitz:blitz",
+            	"org.dancres.blitz:blitzui",
+            	"com.sleepycat:je",
+            	"net.jini.lookup:serviceui",
+            	"org.apache.river:outrigger-dl",
+            	"net.jini:jsk-platform"
             }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
-          	new String[] { home + "${/}configs${/}blitz${/}configs${/}blitz.config" }),
+          	new String[] { home + "/configs/blitz/configs/blitz.config" }
+        ),
 
+/*
 		// MutualExclusion - Locker
- /* 		new SorcerServiceDescriptor(
-           "" + Resolver.resolveRelative("org.sorcersoft.lockmgr:lockmgr-proxy"),
-           policy,
-            ConfigUtil.concat(new Object[] {
-                Resolver.resolveAbsolute("org.sorcersoft.lockmgr:lockmgr-api"), ps,
-                Resolver.resolveAbsolute("org.sorcersoft.lockmgr:lockmgr-service"), ps,
-            	Resolver.resolveAbsolute("org.jgroups:jgroups:2.12.1.Final"), ps,
-            	Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
-            	Resolver.resolveAbsolute("org.apache.river:outrigger-dl"), ps,
-                Resolver.resolveAbsolute("net.jini:jsk-platform")
+ 		new SorcerServiceDescriptor(
+        "" + Resolver.resolveRelative("org.sorcersoft.lockmgr:lockmgr-proxy"),
+        policy,
+        ConfigUtil.concat(new Object[] {
+            Resolver.resolveAbsolute("org.sorcersoft.lockmgr:lockmgr-api"), ps,
+            Resolver.resolveAbsolute("org.sorcersoft.lockmgr:lockmgr-service"), ps,
+            Resolver.resolveAbsolute("org.jgroups:jgroups:2.12.1.Final"), ps,
+            Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
+            Resolver.resolveAbsolute("org.apache.river:outrigger-dl"), ps,
+            Resolver.resolveAbsolute("net.jini:jsk-platform")
+        }),
+        "org.dancres.blitz.jini.lockmgr.ServerImpl",
+         new String[] { home + "/configs/blitz/configs/lockmgr.config" }),
+*/
 
-            }),
-            "org.dancres.blitz.jini.lockmgr.ServerImpl",
-             new String[] { home + "${/}configs${/}blitz${/}configs${/}lockmgr.config" }),
-  */
    		// SORCER Job Service
-       		SorcerDescriptorUtil.getJobber(
-       			policy,
-       			home + "${/}configs${/}sos-providers${/}jobber.config"),
-   
-     		// SORCER Space Service
-       		SorcerDescriptorUtil.getSpacer(
-       			policy,
-       			home + "${/}configs${/}sos-providers${/}spacer.config"),
+        new SorcerServiceDescriptor(
+            standardProviderCodebase,
+            policy,
+            Booter.resolveClasspath(new String[]{
+                "org.sorcersoft.sorcer:commons-prv",
+                "org.sorcersoft.sorcer:jobber-prv"
+            }),
+            "sorcer.core.provider.jobber.ServiceJobber",
+            new String[]{ home + "/configs/sos-providers/jobber.config" }
+        ),
 
-    
-       		// SORCER Catalog Service
-      		SorcerDescriptorUtil.getCataloger(
-       			policy, 
-       			home + "${/}configs${/}sos-providers${/}cataloger.config"),
-     			
-       		// SORCER Logger Service
-       		SorcerDescriptorUtil.getLogger(
-       			policy, 
-       			home + "${/}configs${/}sos-providers${/}logger.config"),
-      			
-       		// SORCER ExertMonitor Service
-       		SorcerDescriptorUtil.getExertMonitor(
-       			policy, 
-       			home + "${/}configs${/}sos-providers${/}exertmonitor.config"),
+        // SORCER Space Service
+        new SorcerServiceDescriptor(
+            standardProviderCodebase,
+            policy,
+            Booter.resolveClasspath(new String[]{
+                "org.sorcersoft.sorcer:commons-prv",
+                "org.sorcersoft.sorcer:spacer-prv"
+            }),
+            "sorcer.core.provider.jobber.ServiceSpacer",
+            new String[]{ home + "/configs/sos-providers/spacer.config" }
+        ),
+
+        // SORCER Catalog Service
+        new SorcerServiceDescriptor(
+            standardProviderCodebase,
+            policy,
+            Booter.resolveClasspath(new String[]{
+                "org.sorcersoft.sorcer:commons-prv",
+                "org.sorcersoft.sorcer:cataloger-prv"
+            }),
+            "sorcer.core.provider.cataloger.ServiceCataloger",
+            new String[]{ home + "/configs/sos-providers/cataloger.config" }
+        ),
+
+        // SORCER Logger Service
+        new SorcerServiceDescriptor(
+            Booter.resolveCodebase(new String[]{
+                "net.jini.lookup:serviceui",
+                "org.sorcersoft.sorcer:sos-platform",
+                "org.sorcersoft.sorcer:sos-exertlet-sui",
+                "org.sorcersoft.sorcer:logger-sui"
+            }),
+            policy,
+            Booter.resolveClasspath(new String[]{
+                "org.sorcersoft.sorcer:commons-prv",
+                "org.sorcersoft.sorcer:logger-prv",
+                "org.sorcersoft.sorcer:logger-sui"
+            }),
+            "sorcer.core.provider.logger.RemoteLoggerManager",
+            new String[]{ home + "/configs/sos-providers/logger.config" }
+        ),
+
+        // SORCER ExertMonitor Service
+        new SorcerServiceDescriptor(
+            standardProviderCodebase,
+            policy,
+            Booter.resolveClasspath(new String[]{
+                "org.sorcersoft.sorcer:commons-prv",
+                "org.sorcersoft.sorcer:exertmonitor-prv",
+                "com.sleepycat:je",
+            }),
+            "sorcer.core.provider.exertmonitor.ExertMonitor",
+            new String[]{ home + "/configs/sos-providers/exertmonitor.config" }
+        ),
        			
-       		// SORCER Database Store Service
-       		SorcerDescriptorUtil.getDatabaseStorer(
-       			policy, 
-       			home + "${/}configs${/}sos-providers${/}dbp.config"),
+        // SORCER Database Store Service
+        new SorcerServiceDescriptor(
+            standardProviderCodebase,
+            policy,
+            Booter.resolveClasspath(new String[]{
+                "org.sorcersoft.sorcer:commons-prv",
+                "org.sorcersoft.sorcer:dbp-prv",
+                "com.sleepycat:je",
+            }),
+            "sorcer.core.provider.dbp.DatabaseProvider",
+            new String[]{ home + "/configs/sos-providers/dbp.config" }
+        ),
 
-       		/* SORCER network exert manager */
-            SorcerDescriptorUtil.getExerter(
-                policy,
-                home + "${/}configs${/}sos-providers${/}exerter-prv.config")
- 
+        // SORCER network exert manager
+        new SorcerServiceDescriptor(
+            standardProviderCodebase,
+            policy,
+            Booter.resolveClasspath("org.sorcersoft.sorcer:commons-prv"),
+            "sorcer.core.provider.ServiceTasker",
+            new String[]{ home + "/configs/sos-providers/exerter-prv.config" }
+        )
     };
 }
