--- a/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/services.config
+++ b/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/services.config
@@ -1,30 +1,29 @@
 import com.sun.jini.start.ServiceDescriptor;
 import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerServiceDescriptor;
-import sorcer.resolver.Resolver;
 import sorcer.util.Artifact;
 
 com.sun.jini.start {
     policy = "${java.security.policy}";
-    runtimeClasspath = Artifact.getSosPlatform().toString()
+    sosPlatform = Artifact.getSosPlatform();
+    runtimeClasspath = "org.sorcersoft.sorcer:sos-platform";
 
 	serviceDescriptors = new ServiceDescriptor[] {
 		new SorcerServiceDescriptor(
-			Booter.getCodebase(new String[]{
+			Booter.resolveCodebase(new String[]{
  			    "org.sorcersoft.sorcer:ju-arithmetic-api",
  			    "org.sorcersoft.sorcer:sos-platform",
  			    "org.sorcersoft.sorcer:sos-env"
-            },
+            }),
 			policy,
-			Resolver.resolveClassPath(new String[] {
+			Booter.resolveClasspath(new String[] {
 			    "org.sorcersoft.sorcer:ju-arithmetic-api",
 			    "org.sorcersoft.sorcer:ju-arithmetic-prv",
                 runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "classpath://config/adder-prv.config" }
+			new String[] { "config/adder-prv.config" }
         ),
-
 
 		new SorcerServiceDescriptor(
             Booter.resolveCodebase(new String[]{
@@ -32,14 +31,14 @@ com.sun.jini.start {
  			    "org.sorcersoft.sorcer:sos-platform"
             }),
 			policy,
-			Resolver.resolveClassPath(new String[] {
+			Booter.resolveClasspath(new String[] {
 			    "org.sorcersoft.sorcer:ju-arithmetic-api",
 			    "org.sorcersoft.sorcer:ju-arithmetic-prv",
                 runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "classpath://config/multiplier-prv.config" }
-       ),
+			new String[] { "config/multiplier-prv.config" }
+        ),
 
         new SorcerServiceDescriptor(
             Booter.resolveCodebase(new String[]{
@@ -47,13 +46,13 @@ com.sun.jini.start {
  			    "org.sorcersoft.sorcer:sos-platform"
             }),
 			policy,
-            Resolver.resolveClassPath(new String[] {
+            Booter.resolveClasspath(new String[] {
 			    "org.sorcersoft.sorcer:ju-arithmetic-api",
 			    "org.sorcersoft.sorcer:ju-arithmetic-prv",
 			    runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "classpath://config/divider-prv.config" }
+			new String[] { "config/divider-prv.config" }
         ),
 
         new SorcerServiceDescriptor(
@@ -62,13 +61,13 @@ com.sun.jini.start {
                "org.sorcersoft.sorcer:sos-platform"
             }),
             policy,
-                Resolver.resolveClassPath(new String[] {
-                    "org.sorcersoft.sorcer:ju-arithmetic-api",
-                    "org.sorcersoft.sorcer:ju-arithmetic-prv",
-                    runtimeClasspath
-		        }),
-		        "sorcer.core.provider.ServiceTasker",
-		        new String[] { "classpath://config/subtractor-prv.config" }
+            Booter.resolveClasspath(new String[] {
+                "org.sorcersoft.sorcer:ju-arithmetic-api",
+                "org.sorcersoft.sorcer:ju-arithmetic-prv",
+                runtimeClasspath
+            }),
+            "sorcer.core.provider.ServiceTasker",
+            new String[] { "config/subtractor-prv.config" }
         )
     };
 }
