--- a/examples/first/first-prv/src/main/resources/config/services.config
+++ b/examples/first/first-prv/src/main/resources/config/services.config
@@ -1,7 +1,5 @@
 import com.sun.jini.start.ServiceDescriptor;
 import sorcer.provider.boot.SorcerServiceDescriptor;
-import sorcer.resolver.Resolver;
-import sorcer.util.Artifact;
 import sorcer.provider.boot.Booter;
 
 com.sun.jini.start {
@@ -9,20 +7,16 @@ com.sun.jini.start {
 
 	serviceDescriptors = new ServiceDescriptor[] {
 		new SorcerServiceDescriptor(
-			Booter.resolveCodebase(
-				new String[]{
-					"com.example.sorcer:first-api:1.0-SNAPSHOT",
-//					"net.jini.lookup:serviceui",
-					Artifact.getSosPlatform().toString()
-				}
-			),
+			Booter.resolveCodebase(new String[]{
+                "com.example.sorcer:first-api:1.0-SNAPSHOT",
+//				"net.jini.lookup:serviceui",
+                "org.sorcersoft.sorcer:sos-platform"
+            }),
 			policy,
-			Resolver.resolveClassPath(
-				new String[]{
-					"com.example.sorcer:first-api:1.0-SNAPSHOT",
-					"com.example.sorcer:first-prv:1.0-SNAPSHOT"
-				}
-			),
+			Booter.resolveClasspath(new String[]{
+                "com.example.sorcer:first-api:1.0-SNAPSHOT",
+                "com.example.sorcer:first-prv:1.0-SNAPSHOT"
+            }),
 			"sorcer.core.provider.ServiceTasker",
 			new String[] { "classpath:/config/SampleService.config" }
 		)
