--- a/examples/first/first-prv/pom.xml
+++ b/examples/first/first-prv/pom.xml
@@ -50,8 +50,8 @@
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
-					<groupId>org.sorcersoft.sorcer</groupId>
-					<artifactId>locker</artifactId>
+					<groupId>org.sorcersoft.lockmgr</groupId>
+					<artifactId>lockmgr</artifactId>
 				</exclusion>
 				<exclusion>
 					<groupId>org.sorcersoft.sorcer</groupId>
@@ -82,12 +82,20 @@
 									<goal>run-requestor</goal>
 								</goals>
 								<configuration>
-									<mainClass>com.example.sorcer.SampleServiceTester</mainClass>
-									<requestorClasspath>
-										<param>${project.groupId}:${project.artifactId}:${project.version}</param>
-										<param>org.sorcersoft.sorcer:commons-req:${v.sorcer}</param>
-										<param>net.jini.lookup:serviceui:${v.jini}</param>
-									</requestorClasspath>
+									<requestors>
+										<param>
+											<mainClass>com.example.sorcer.SampleServiceTester</mainClass>
+											<classpath>
+												<param>${project.groupId}:${project.artifactId}:${project.version}</param>
+												<param>${project.groupId}:first-api:${project.version}</param>
+												<param>org.sorcersoft.sorcer:commons-req:${v.sorcer}</param>
+												<param>net.jini.lookup:serviceui:${v.jini}</param>
+											</classpath>
+											<arguments>
+												<param>com.example.sorcer.SampleServiceTester</param>
+											</arguments>
+										</param>
+									</requestors>
 								</configuration>
 							</execution>
 							<execution>
