--- a/tools/sorcer-provider/src/main/resources/archetype-resources/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/pom.xml
@@ -7,6 +7,7 @@
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>provider-root</artifactId>
 		<version>1.0-SNAPSHOT</version>
+        <relativePath></relativePath>
 	</parent>
 
 	<groupId>${groupId}</groupId>
