+configuration for blitz databases; -unused dependency on spki

--- a/configs/blitz/configs/blitz.config
+++ b/configs/blitz/configs/blitz.config
@@ -23,9 +23,10 @@ import net.jini.lookup.entry.*;
 import org.dancres.blitz.serviceui.DashboardUI;
 
 import sorcer.util.Sorcer;
+import sorcer.core.SorcerConstants;
 
 org.dancres.blitz {
-	home = "${sorcer.home}";
+	home = System.getProperty(SorcerConstants.S_BLITZ_HOME, "${sorcer.home}/databases");
     initialAttrs = new Entry[]
             {org.dancres.blitz.serviceui.DashboardUI.getUIDescriptor(),
             new Comment("Host: " + Sorcer.getHostName())};
@@ -60,11 +61,11 @@ org.dancres.blitz {
     // NOTE: Each concurrent Blitz instance should use a different directory
     // for it's logs and persistent state - if this isn't done
     // "bad things will happen" (TM)
-    persistDir = home + "${/}databases${/}dbfiles_blitz";
+    persistDir = home + "/dbfiles_blitz";
 
     // Location of log files - SHOULD BE DIFFERENT FROM ABOVE
     // logDir = "/blitzlog";
-    logDir = home + "${/}databases${/}blitzlog";
+    logDir = home + "/blitzlog";
 
    // Maximum number of async write threads
     // DO NOT CHANGE THIS - BLITZ DOESN'T SUPPORT MORE THAN ONE WRITE THREAD
