--- a/tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/divider-prv.config
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/divider-prv.config
@@ -1,4 +1,4 @@
-/* 
+/*
 * Provider dependency injections
 * It uses component entry names defined in the SORCER provider
 * as defined by sorcer.core.provider.SorcerProvider.
@@ -10,13 +10,14 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.core.provider.*;
+import sorcer.arithmetic.provider.*;
 
 sorcer.core.provider.ServiceProvider {
         /* service provider genetic properties */
-		name = "Subtractor";
-		description = "Subtractor - bean provider";
-		location = "Sorcer Lab";
-		publishedInterfaces = new Class[] { junit.sorcer.core.provider.Subtractor.class };
+		name = "Divider";
+		description = "Divider - bean provider";
+		location = "Sorcersoft.com Lab";
+		publishedInterfaces = new Class[] { junit.sorcer.core.provider.Divider.class };
 
 		spaceEnabled = true;
 		
@@ -24,7 +25,7 @@ sorcer.core.provider.ServiceProvider {
 		providerIdPersistent = false;
 		
 		// service beans	
-		beanClasses = new Class[] { junit.sorcer.core.provider.SubtractorImpl.class }; 
+		beanClasses = new Class[] { junit.sorcer.core.provider.DividerImpl.class }; 
 		
 		iconName="sorcer.jpg";
 }
