--- a/tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/subtractor-prv.config
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/subtractor-prv.config
@@ -1,4 +1,4 @@
-/* 
+/*
 * Provider dependency injections
 * It uses component entry names defined in the SORCER provider
 * as defined by sorcer.core.provider.SorcerProvider.
@@ -10,14 +10,13 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.core.provider.*;
-import junit.sorcer.arithmetic.provider.*;
 
 sorcer.core.provider.ServiceProvider {
         /* service provider genetic properties */
-		name = "Multiplier";
-		description = "Multiplier - bean provider";
+		name = "Subtractor";
+		description = "Subtractor - bean provider";
 		location = "Sorcer Lab";
-		publishedInterfaces = new Class[] { junit.sorcer.core.provider.Multiplier.class };
+		publishedInterfaces = new Class[] { junit.sorcer.core.provider.Subtractor.class };
 
 		spaceEnabled = true;
 		
@@ -25,7 +24,7 @@ sorcer.core.provider.ServiceProvider {
 		providerIdPersistent = false;
 		
 		// service beans	
-		beanClasses = new Class[] { junit.sorcer.core.provider.MultiplierImpl.class }; 
+		beanClasses = new Class[] { junit.sorcer.core.provider.SubtractorImpl.class }; 
 		
 		iconName="sorcer.jpg";
 }
