--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ before_script:
 #temporally disable integration tests. Enable them after all of them has been migrated to sorcer-maven-plugin
 #for now run locally:
 #mvn verify -Dmaven.test.skip=false -Prun-its -pl :first-prv,:ju-arithmetic-prv
-#script: cd $SORCER_HOME/sos/sos-tests/ && mvn -Dmaven.test.skip=false -Prun-its test
-script: cd $SORCER_HOME/sos/sos-tests/ && mvn -Dmaven.test.skip=false test
+#script: cd $SORCER_HOME/tests/ && mvn -Dmaven.test.skip=false -Prun-its test
+script: cd $SORCER_HOME/tests/ && mvn -Dmaven.test.skip=false test
 jdk:
 #  - openjdk6
 #  - openjdk7
