--- a/tests/int-tests/pom.xml
+++ b/tests/int-tests/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<artifactId>sos-tests</artifactId>
+		<artifactId>tests</artifactId>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
@@ -64,25 +64,4 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.sorcersoft.sorcer</groupId>
-				<artifactId>sorcer-maven-plugin</artifactId>
-				<version>${v.sorcer}</version>
-				<goals>
-					<goal>run-requestor</goal>
-				</goals>
-				<configuration>
-					<mainClass>junit.sorcer.core.provider.ArithmeticNetTest</mainClass>
-					<scope>test</scope>
-					<requestorClasspath>
-						<requestorClasspath>net.jini.lookup:serviceui:${v.jini}</requestorClasspath>
-						<requestorClasspath>org.sorcersoft.sorcer:sos-env:${v.sorcer}</requestorClasspath>
-					</requestorClasspath>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
