[pom] move maven.test.skip=true from examples/pom.xml to ex*/pom.xml (enable tests for first)

--- a/examples/ex1/pom.xml
+++ b/examples/ex1/pom.xml
@@ -23,4 +23,9 @@
 		<module>ex1-rdl</module>
 		<module>ex1-req</module>
 	</modules>
+
+	<properties>
+		<maven.test.skip>true</maven.test.skip>
+		<skipTests>${maven.test.skip}</skipTests>
+	</properties>
 </project>
