--- a/examples/ex3/pom.xml
+++ b/examples/ex3/pom.xml
@@ -19,4 +19,9 @@
 	<modules>
         <module>ex3-req</module>
 	</modules>
+
+	<properties>
+		<maven.test.skip>true</maven.test.skip>
+		<skipTests>${maven.test.skip}</skipTests>
+	</properties>
 </project>
