[maven plugin] fix mojo configuration (WIP)

--- a/tools/sorcer-maven-plugin/pom.xml
+++ b/tools/sorcer-maven-plugin/pom.xml
@@ -119,6 +119,10 @@
 		</dependency>
 	</dependencies>
 
+	<prerequisites>
+		<maven>3.0.0</maven>
+	</prerequisites>
+
 	<build>
 		<plugins>
 			<plugin>
