--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,10 @@ install: mvn -q install
 before_script:
 #  - cp -f $SORCER_HOME/configs/template/sorcer.env_int-tests $SORCER_HOME/configs/sorcer.env
 #  - export JAVA_OPTS=-Djava.net.preferIPv6Stack=true
+  - cd distribution/target/sorcer-*/sorcer-*/
+  - export SORCER_HOME=`pwd`
   - $SORCER_HOME/bin/sorcer-boot &
-  - sleep 10
+  - sleep 8
 #temporally disable integration tests. Enable them after all of them has been migrated to sorcer-maven-plugin
 #for now run locally:
 #mvn verify -Dmaven.test.skip=false -Prun-its -pl :first-prv,:ju-arithmetic-prv
