--- a/pom.xml
+++ b/pom.xml
@@ -508,5 +508,11 @@
 				<module>distribution</module>
 			</modules>
 		</profile>
-	</profiles>
+        <profile>
+            <id>disttest</id>
+            <modules>
+                <module>distribution</module>
+            </modules>
+        </profile>
+    </profiles>
 </project>
