add ex6-api to imports for nsh; fix f4j.ntl; add missing sig operator

--- a/configs/shell/configs/nsh-start.config
+++ b/configs/shell/configs/nsh-start.config
@@ -19,6 +19,7 @@
     load !{mvn:org.codehaus.groovy:groovy-all}
     load !{mvn:net.jini.lookup:serviceui}
     load !{mvn:org.rioproject:rio-platform}
+    load !{mvn:org.sorcersoft.sorcer:ex6-api}
     
     # load user specific libraries
     load !{user.home}/.nsh/lib/*.jar
