--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -5,11 +5,11 @@
 
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<artifactId>sorcer</artifactId>
+		<artifactId>sos</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>tests</artifactId>
+	<artifactId>sos-tests</artifactId>
 	<packaging>pom</packaging>
 	<name>SORCER OS :: int tests</name>
 	<modules>
