--- a/configs/jini/configs/reggie.config
+++ b/configs/jini/configs/reggie.config
@@ -14,5 +14,7 @@ com.sun.jini.reggie {
     //initialLookupLocators
     //initialUnicastDiscoveryPort
    
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+//    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance("192.168.1.139",0), new BasicILFactory());
+
 }
