--- a/tools/provider-root/pom.xml
+++ b/tools/provider-root/pom.xml
@@ -57,6 +57,8 @@
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
+		    <!-- Required for Eclipse to accept a newer JDK without error -->
+		    <fork>true</fork>
                 </configuration>
             </plugin>
             <plugin>
