replace strings with constants; add internalWebster to ArithmeticNetTest; make maven plugin work with ju-arithmentic - WIP

--- a/tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/services.config
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/services.config
@@ -17,7 +17,7 @@ com.sun.jini.start {
             }),
 			policy,
 			Booter.resolveClasspath(new String[] {
-			    "org.sorcersoft.sorcer:ju-arithmetic-api",
+//			    "org.sorcersoft.sorcer:ju-arithmetic-api",
 			    "org.sorcersoft.sorcer:ju-arithmetic-prv",
                 runtimeClasspath
 			}),
@@ -32,7 +32,7 @@ com.sun.jini.start {
             }),
 			policy,
 			Booter.resolveClasspath(new String[] {
-			    "org.sorcersoft.sorcer:ju-arithmetic-api",
+//			    "org.sorcersoft.sorcer:ju-arithmetic-api",
 			    "org.sorcersoft.sorcer:ju-arithmetic-prv",
                 runtimeClasspath
 			}),
@@ -47,7 +47,7 @@ com.sun.jini.start {
             }),
 			policy,
             Booter.resolveClasspath(new String[] {
-			    "org.sorcersoft.sorcer:ju-arithmetic-api",
+//			    "org.sorcersoft.sorcer:ju-arithmetic-api",
 			    "org.sorcersoft.sorcer:ju-arithmetic-prv",
 			    runtimeClasspath
 			}),
@@ -57,12 +57,12 @@ com.sun.jini.start {
 
         new SorcerServiceDescriptor(
             Booter.resolveCodebase(new String[]{
-		       "org.sorcersoft.sorcer:ju-arithmetic-api",
-               "org.sorcersoft.sorcer:sos-platform"
+				"org.sorcersoft.sorcer:ju-arithmetic-api",
+				"org.sorcersoft.sorcer:sos-platform"
             }),
             policy,
             Booter.resolveClasspath(new String[] {
-                "org.sorcersoft.sorcer:ju-arithmetic-api",
+//				"org.sorcersoft.sorcer:ju-arithmetic-api",
                 "org.sorcersoft.sorcer:ju-arithmetic-prv",
                 runtimeClasspath
             }),
