--- a/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
@@ -45,6 +45,12 @@
 			<groupId>org.rioproject</groupId>
 			<artifactId>rio-platform</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>commons-req</artifactId>
+            <version>${v.sorcer}</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -93,8 +99,9 @@
 								<configuration>
 									<requestorClasspath>
 										<entry>org.sorcersoft.sorcer:sos-platform:${v.sorcer}</entry>
+										<entry>org.sorcersoft.sorcer:commons-req:${v.sorcer}</entry>
 										<entry>${project.groupId}:${project.artifactId}:${project.version}</entry>
-										<entry>${project.groupId}:ju-arithmetic-api:${project.version}</entry>
+										<!--<entry>${project.groupId}:ju-arithmetic-api:${project.version}</entry>-->
 										<entry>net.jini.lookup:serviceui:${v.jini}</entry>
 										<entry>junit:junit:4.11</entry>
 										<entry>org.slf4j:slf4j-simple:1.7.5</entry>
@@ -104,8 +111,7 @@
 										<param>
 											<mainClass>junit.sorcer.core.provider.ArithmeticNetTest</mainClass>
 											<codebase>
-												<param>${project.groupId}:${project.artifactId}:${project.version}
-												</param>
+												<!--<param>${project.groupId}:${project.artifactId}:${project.version}</param>-->
 												<param>org.sorcersoft.sorcer:sos-platform:${v.sorcer}</param>
 												<param>org.sorcersoft.sorcer:ju-arithmetic-api:${v.sorcer}</param>
 											</codebase>
